--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
       </div>
     </div>
 
+    <div class="block block-volume">
+      <div class="panel-title">Field Volume</div>
+
+      <div class="sub-title">Position (center)</div>
+      <div class="slider-row">
+        <label for="fieldPosXSlider">X</label>
+        <input id="fieldPosXSlider" type="range" min="-100" max="100" value="0" step="1">
+      </div>
+      <div class="slider-row">
+        <label for="fieldPosYSlider">Y</label>
+        <input id="fieldPosYSlider" type="range" min="-100" max="100" value="0" step="1">
+      </div>
+      <div class="slider-row">
+        <label for="fieldPosZSlider">Z</label>
+        <input id="fieldPosZSlider" type="range" min="-100" max="100" value="0" step="1">
+      </div>
+
+      <div class="sub-title">Size (world units)</div>
+      <div class="slider-row">
+        <label for="fieldSizeXSlider">Size X</label>
+        <input id="fieldSizeXSlider" type="range" min="2" max="20" value="8" step="1">
+      </div>
+      <div class="slider-row">
+        <label for="fieldSizeYSlider">Size Y</label>
+        <input id="fieldSizeYSlider" type="range" min="2" max="20" value="8" step="1">
+      </div>
+      <div class="slider-row">
+        <label for="fieldSizeZSlider">Size Z</label>
+        <input id="fieldSizeZSlider" type="range" min="2" max="20" value="8" step="1">
+      </div>
+    </div>
+
     <div class="block block-source1">
       <div class="panel-title">Source 1 (Red)</div>
       <div class="slider-row">
