--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Inteference City</title>
+  <title>E C H O G R I D</title>
   <link rel="stylesheet" href="style.css" />
   <script type="importmap">
     {
@@ -31,6 +31,9 @@
 
   <!-- Bottom Credit Overlay -->
   <div id="creditOverlay">{ p r o t o c e l l : l a b s }</div>
+
+  <!-- Bottom Disclaimer Overlay -->
+  <div id="disclaimerOverlay">Junction Utopia & Dystopia hackathon, 2025</div>
 
   <!-- Control UI that main.js expects -->
   <div id="ui">
